[gd_scene load_steps=47 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/player.dae" type="PackedScene" id=2]
[ext_resource path="res://player/crosshair.png" type="Texture" id=3]
[ext_resource path="res://player/step_random_pitch.tres" type="AudioStream" id=4]
[ext_resource path="res://player/fx_jump.wav" type="AudioStream" id=5]
[ext_resource path="res://player/fx_land.wav" type="AudioStream" id=6]
[ext_resource path="res://player/fx_shoot.wav" type="AudioStream" id=7]
[ext_resource path="res://player/Health.gd" type="Script" id=8]
[ext_resource path="res://interface/interface.gd" type="Script" id=9]
[ext_resource path="res://interface/bar/bar.gd" type="Script" id=10]
[ext_resource path="res://interface/counter/label_bg.png" type="Texture" id=11]
[ext_resource path="res://interface/bar/label_HP.png" type="Texture" id=12]
[ext_resource path="res://interface/theme/default_theme.tres" type="Theme" id=13]
[ext_resource path="res://interface/bar/bg.png" type="Texture" id=14]
[ext_resource path="res://interface/bar/fill.png" type="Texture" id=15]
[ext_resource path="res://interface/bar/texture_progress.gd" type="Script" id=16]
[ext_resource path="res://interface/counter/counter.gd" type="Script" id=17]

[sub_resource type="AnimationNodeAdd3" id=1]

resource_local_to_scene = true
filter_enabled = true
filters = [ "Robot_Skeleton/Skeleton:neck.001", "Robot_Skeleton/Skeleton:upper_arm.R" ]

[sub_resource type="AnimationNodeAnimation" id=2]

resource_local_to_scene = true
animation = "AIM-Down"

[sub_resource type="AnimationNodeAnimation" id=3]

resource_local_to_scene = true
animation = "AIM-Up"

[sub_resource type="AnimationNodeBlend2" id=4]

resource_local_to_scene = true
filter_enabled = true
filters = [ "Robot_Skeleton/Skeleton:eyelid.d.L", "Robot_Skeleton/Skeleton:eyelid.d.R", "Robot_Skeleton/Skeleton:eyelid.u.L", "Robot_Skeleton/Skeleton:eyelid.u.R", "Robot_Skeleton/Skeleton:eyes" ]

[sub_resource type="AnimationNodeAnimation" id=5]

resource_local_to_scene = true
animation = "eyes-cycle"

[sub_resource type="AnimationNodeAnimation" id=6]

resource_local_to_scene = true
animation = "jump_5_hardlanding"

[sub_resource type="AnimationNodeAnimation" id=7]

resource_local_to_scene = true
animation = "jump_4_falling-cycle"

[sub_resource type="AnimationNodeAnimation" id=8]

resource_local_to_scene = true
animation = "jump_2_upwards-cycle"

[sub_resource type="AnimationNodeOneShot" id=9]

resource_local_to_scene = true
fadein_time = 0.25
fadeout_time = 0.25

[sub_resource type="AnimationNodeTransition" id=10]

resource_local_to_scene = true
input_count = 4
xfade_time = 1.0
input_0/name = "strafe"
input_0/auto_advance = false
input_1/name = "walk"
input_1/auto_advance = false
input_2/name = "jump_up"
input_2/auto_advance = false
input_3/name = "jump_down"
input_3/auto_advance = false

[sub_resource type="AnimationNodeAnimation" id=11]

resource_local_to_scene = true
animation = "strafe_left-cycle"

[sub_resource type="AnimationNodeAnimation" id=12]

resource_local_to_scene = true
animation = "strafe_right-cycle"

[sub_resource type="AnimationNodeAnimation" id=13]

resource_local_to_scene = true
animation = "strafe_back-cycle"

[sub_resource type="AnimationNodeAnimation" id=14]

resource_local_to_scene = true
animation = "strafe_front-cycle"

[sub_resource type="AnimationNodeAnimation" id=15]

resource_local_to_scene = true
animation = "Idlecombat-cycle"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]

resource_local_to_scene = true
blend_point_0/node = SubResource( 11 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 12 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 13 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 14 )
blend_point_3/pos = Vector2( 0, 1 )
blend_point_4/node = SubResource( 15 )
blend_point_4/pos = Vector2( 0, 0 )

[sub_resource type="AnimationNodeAnimation" id=17]

resource_local_to_scene = true
animation = "Idle-cycle"

[sub_resource type="AnimationNodeAnimation" id=18]

resource_local_to_scene = true
animation = "running_nogun-cycle"

[sub_resource type="AnimationNodeAnimation" id=19]

resource_local_to_scene = true
animation = "running_gun-cycle"

[sub_resource type="AnimationNodeAnimation" id=20]

resource_local_to_scene = true
animation = "Idlecombat-cycle"

[sub_resource type="AnimationNodeBlendSpace2D" id=21]

resource_local_to_scene = true
blend_point_0/node = SubResource( 17 )
blend_point_0/pos = Vector2( 0, 0 )
blend_point_1/node = SubResource( 18 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 19 )
blend_point_2/pos = Vector2( 1, 1 )
blend_point_3/node = SubResource( 20 )
blend_point_3/pos = Vector2( 0, 1 )
min_space = Vector2( 0, 0 )
x_label = "speed"
y_label = "gun"

[sub_resource type="AnimationNodeBlendTree" id=22]

resource_local_to_scene = true
graph_offset = Vector2( -357.331, 58.1984 )
nodes/aim/node = SubResource( 1 )
nodes/aim/position = Vector2( 340, 120 )
nodes/aimdown/node = SubResource( 2 )
nodes/aimdown/position = Vector2( 120, 120 )
nodes/aimup/node = SubResource( 3 )
nodes/aimup/position = Vector2( 140, 420 )
nodes/eye_blend/node = SubResource( 4 )
nodes/eye_blend/position = Vector2( 560, 120 )
nodes/eyes/node = SubResource( 5 )
nodes/eyes/position = Vector2( 340, 360 )
nodes/hardland/node = SubResource( 6 )
nodes/hardland/position = Vector2( -100, 440 )
nodes/jumpdown/node = SubResource( 7 )
nodes/jumpdown/position = Vector2( -380, 440 )
nodes/jumpup/node = SubResource( 8 )
nodes/jumpup/position = Vector2( -360, 320 )
nodes/land/node = SubResource( 9 )
nodes/land/position = Vector2( 120, 240 )
nodes/output/position = Vector2( 760, 120 )
nodes/state/node = SubResource( 10 )
nodes/state/position = Vector2( -60, 180 )
nodes/strafe/node = SubResource( 16 )
nodes/strafe/position = Vector2( -340, 0 )
nodes/walk/node = SubResource( 21 )
nodes/walk/position = Vector2( -360, 160 )
node_connections = [ "output", 0, "eye_blend", "state", 0, "strafe", "state", 1, "walk", "state", 2, "jumpup", "state", 3, "jumpdown", "land", 0, "state", "land", 1, "hardland", "aim", 0, "aimdown", "aim", 1, "land", "aim", 2, "aimup", "eye_blend", 0, "aim", "eye_blend", 1, "eyes" ]

[sub_resource type="CapsuleShape" id=23]

radius = 0.490082
height = 0.560254

[sub_resource type="RayShape" id=24]


[sub_resource type="Animation" id=25]

tracks/0/type = "value"
tracks/0/path = NodePath("camera_rot/Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.287175, 1 ),
"update": 3,
"values": [ Vector3( 0, 0.592719, -2.15676 ), Vector3( 0, 0.592719, -2.15676 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../crosshair:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=26]

tracks/0/type = "value"
tracks/0/path = NodePath("camera_rot/Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.233259, 1 ),
"update": 3,
"values": [ Vector3( -0.684193, 0.265504, -1.04126 ), Vector3( -0.684193, 0.265504, -1.04126 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../crosshair:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AudioStreamRandomPitch" id=27]

audio_stream = ExtResource( 7 )

[sub_resource type="Animation" id=28]

resource_name = "SETUP"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Count/Number:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 43, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Count/Number:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Count/Title:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=29]

resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Count/Number:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 30, 6 ), Vector2( 59, 6 ), Vector2( 35, 6 ), Vector2( 47, 6 ), Vector2( 43, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Count/Number:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.960938, 0.229355, 0.033783, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="robot" type="KinematicBody"]
collision_layer = 3
script = ExtResource( 1 )

[node name="Scene Root" parent="." instance=ExtResource( 2 )]

[node name="gun_bone" type="BoneAttachment" parent="Scene Root/Robot_Skeleton/Skeleton" index="5"]
transform = Transform( 0.917404, -0.241097, 0.316915, -0.238511, -0.969991, -0.047833, 0.318971, -0.0316805, -0.947247, -0.207103, 1.39341, 0.474854 )
bone_name = "hand.R"

[node name="shoot_from" type="Position3D" parent="Scene Root/Robot_Skeleton/Skeleton/gun_bone"]
transform = Transform( 0.999919, 0.0106283, -0.00705317, -0.0105956, 0.99993, 0.00505793, 0.00710796, -0.0049828, 0.999962, 0.0100024, -0.00491095, -0.40371 )

[node name="RootMotionView" type="RootMotionView" parent="."]
animation_path = NodePath("../AnimationTree")

[node name="animation_tree" type="AnimationTree" parent="."]
tree_root = SubResource( 22 )
anim_player = NodePath("../Scene Root/AnimationPlayer")
active = true
process_mode = 0
root_motion_track = NodePath("Robot_Skeleton/Skeleton:root")
parameters/aim/add_amount = 0.0
parameters/eye_blend/blend_amount = 1.0
parameters/land/active = false
parameters/state/current = 0
parameters/strafe/blend_position = Vector2( 0, 0 )
parameters/walk/blend_position = Vector2( 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.03615, 0 )
shape = SubResource( 23 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.00357, 0 )
shape = SubResource( 24 )

[node name="camera_base" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.85456, 0 )

[node name="camera_rot" type="Spatial" parent="camera_base"]

[node name="Camera" type="Camera" parent="camera_base/camera_rot"]
transform = Transform( -1, 1.77636e-14, -8.74227e-08, -3.17959e-08, 0.931515, 0.363703, 8.14356e-08, 0.363703, -0.931515, 0, 0.592719, -2.15676 )
current = true
far = 300.0

[node name="animation" type="AnimationPlayer" parent="camera_base"]
anims/far = SubResource( 25 )
anims/shoot = SubResource( 26 )

[node name="crosshair" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.3346
margin_top = -23.8394
margin_right = 14.6654
margin_bottom = 8.16064
texture = ExtResource( 3 )

[node name="sfx" type="Node" parent="."]

[node name="step" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 4 )

[node name="jump" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 5 )

[node name="land" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 6 )

[node name="shoot" type="AudioStreamPlayer" parent="sfx"]
stream = SubResource( 27 )

[node name="Health" type="Spatial" parent="."]
script = ExtResource( 8 )

[node name="Interface" type="Spatial" parent="."]
script = ExtResource( 9 )

[node name="Bars" type="VBoxContainer" parent="Interface"]
editor/display_folded = true
margin_left = 30.0
margin_top = 30.0
margin_right = 530.0
margin_bottom = 127.0
size_flags_horizontal = 3

[node name="LifeBar" type="HBoxContainer" parent="Interface/Bars"]
margin_right = 550.0
margin_bottom = 53.0
script = ExtResource( 10 )

[node name="Count" type="NinePatchRect" parent="Interface/Bars/LifeBar"]
margin_right = 150.0
margin_bottom = 53.0
rect_min_size = Vector2( 150, 0 )
texture = ExtResource( 11 )

[node name="Title" type="TextureRect" parent="Interface/Bars/LifeBar/Count"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.5
margin_right = 49.0
margin_bottom = 19.5
texture = ExtResource( 12 )
stretch_mode = 4

[node name="Number" type="Label" parent="Interface/Bars/LifeBar/Count"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -20.5
margin_right = -8.0
margin_bottom = 19.5
theme = ExtResource( 13 )
text = "12/34"
align = 2
valign = 2

[node name="TextureProgress" type="TextureProgress" parent="Interface/Bars/LifeBar"]
margin_left = 154.0
margin_right = 550.0
margin_bottom = 53.0
max_value = 34.0
value = 12.0
texture_under = ExtResource( 14 )
texture_progress = ExtResource( 15 )
script = ExtResource( 16 )

[node name="Tween" type="Tween" parent="Interface/Bars/LifeBar"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Interface/Bars/LifeBar"]
autoplay = "SETUP"
anims/SETUP = SubResource( 28 )
anims/shake = SubResource( 29 )

[node name="Counters" type="HBoxContainer" parent="Interface"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -130.0
margin_top = 33.0
margin_right = -30.0
margin_bottom = 100.0
size_flags_vertical = 4
custom_constants/separation = 10

[node name="RupeeCounter" type="NinePatchRect" parent="Interface/Counters"]
editor/display_folded = true
margin_right = 100.0
margin_bottom = 67.0
rect_min_size = Vector2( 100, 0 )
texture = ExtResource( 11 )
script = ExtResource( 17 )

[node name="Number" type="Label" parent="Interface/Counters/RupeeCounter"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -40.0
margin_right = 39.0
margin_bottom = 40.0
theme = ExtResource( 13 )
text = "10"
valign = 1

[connection signal="health_changed" from="Health" to="Interface" method="_on_Health_health_changed"]
[connection signal="health_updated" from="Interface" to="Interface/Bars/LifeBar" method="_on_Interface_health_updated"]
[connection signal="rupees_updated" from="Interface" to="Interface/Counters/RupeeCounter" method="_on_Interface_rupees_updated"]
[connection signal="maximum_changed" from="Interface/Bars/LifeBar" to="Interface/Bars/LifeBar/TextureProgress" method="_on_Bar_maximum_changed"]

[editable path="Scene Root"]
